# uloz-to-client

./: CMakeLists.txt  uloz-to-client.qrc
src/: CDownloadDelegate.cpp  CDownloadDelegate.h  CDownloadModel.cpp  CDownloadModel.h  CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CMainWindow_actions.cpp  CMainWindow_communication.cpp  CNewDownloadDialog.cpp  CNewDownloadDialog.h  CNewDownloadDialog.ui  CSearchDialog.cpp  CSearchDialog.h  CSearchDialog.ui  CSearchModel.cpp  CSearchModel.h  main.cpp
